--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,19 +22,51 @@
 </head>
 
 <header>
-
+    <h1>Let's Play</h1>
 </header>
 
 <body>
-    <h1> Here is the test font</h1>
-    <main>
+    <aside>
+        <div>
+            <form action="">
+                <input type="checkbox" id="" name="">
+                <label for="">type1</label><br>
+                <input type="checkbox" id="" name="">
+                <label for="">type2</label><br>
+                <input type="checkbox" id="" name="">
+                <label for="">type3</label><br>
+            </form>
+        </div>
+        <div>
+            <h2>Price check</h2>
+        </div>
+    </aside>
 
+    <main>
+        <section>
+            <h2>List of games</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Hardware</h2>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
     </main>
-    
+
 </body>
 
 <footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="./assets/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js"></script>
 </footer>
+
 </html>
