tested if a MDC CSS rule is applied. It is working as intended

--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <title>Let's Play!</title>
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-
 </head>
 
-<header>
-    <h1>Let's Play</h1>
-</header>
 
 <body>
+    <header>
+        <h1>Let's Play</h1>
+    </header>
+    <!-- to test mdc is working -->
+    <button class="mdc-button foo-button">
+        <div class="mdc-button__ripple"></div>
+        <span class="mdc-button__label">Button</span>
+    </button>
+    
     <aside>
         <div>
             <form action="">
