--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Let's Play!</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png">
@@ -15,32 +16,56 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-    <title>Let's Play!</title>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 </head>
 
 
 <body>
     <header>
-        <h1>Let's Play</h1>
+        <ul id="dropdown1" class="dropdown-content">
+            <li><a href="#!">one</a></li>
+            <li><a href="#!">two</a></li>
+            <li class="divider"></li>
+            <li><a href="#!">three</a></li>
+          </ul>
+          <nav>
+            <div class="nav-wrapper">
+              <a href="#!" class="brand-logo">Let's Play</a>
+              <ul class="right hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <!-- Dropdown Trigger -->
+                <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+              </ul>
+            </div>
+          </nav>
     </header>
-    <!-- to test mdc is working -->
-    <button class="mdc-button foo-button">
-        <div class="mdc-button__ripple"></div>
-        <span class="mdc-button__label">Button</span>
-    </button>
+    <!-- to test materialize is working -->
+    <a class="waves-effect waves-light btn">button</a>
+
     
     <aside>
         <div>
-            <form action="">
-                <input type="checkbox" id="" name="">
-                <label for="">type1</label><br>
-                <input type="checkbox" id="" name="">
-                <label for="">type2</label><br>
-                <input type="checkbox" id="" name="">
-                <label for="">type3</label><br>
-            </form>
+            <p>
+                <label>
+                  <input type="checkbox" class="filled-in" checked="checked" />
+                  <span>Filled in</span>
+                </label>
+            </p>
+            <p>
+                <label>
+                  <input type="checkbox" class="filled-in" checked="checked" />
+                  <span>Filled in</span>
+                </label>
+            </p>
+            <p>
+                <label>
+                  <input type="checkbox" class="filled-in" checked="checked" />
+                  <span>Filled in</span>
+                </label>
+            </p>
         </div>
         <div>
             <h2>Price check</h2>
@@ -50,11 +75,33 @@
     <main>
         <section>
             <h2>List of games</h2>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            <div class="row">
+                <div class="col s12 m5">
+                  <div class="card-panel teal">
+                    <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                    I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                    </span>
+                  </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m5">
+                  <div class="card-panel teal">
+                    <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                    I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                    </span>
+                  </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m5">
+                  <div class="card-panel teal">
+                    <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                    I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                    </span>
+                  </div>
+                </div>
+            </div>
         </section>
         <section>
             <h2>Hardware</h2>
@@ -70,7 +117,8 @@
 
 <footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </footer>
 
