--- a/index.html
+++ b/index.html
@@ -34,84 +34,77 @@
             <div class="nav-wrapper">
               <a href="#!" class="brand-logo">Let's Play</a>
               <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
+                <li><a href="#">Sass</a></li>
+                <li><a href="#">Components</a></li>
                 <!-- Dropdown Trigger -->
                 <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
               </ul>
             </div>
           </nav>
     </header>
-    <!-- to test materialize is working -->
-    <a class="waves-effect waves-light btn">button</a>
-
     
-    <aside>
-        <div>
-            <p>
-                <label>
-                  <input type="checkbox" class="filled-in" checked="checked" />
-                  <span>Filled in</span>
-                </label>
-            </p>
-            <p>
-                <label>
-                  <input type="checkbox" class="filled-in" checked="checked" />
-                  <span>Filled in</span>
-                </label>
-            </p>
-            <p>
-                <label>
-                  <input type="checkbox" class="filled-in" checked="checked" />
-                  <span>Filled in</span>
-                </label>
-            </p>
-        </div>
-        <div>
-            <h2>Price check</h2>
-        </div>
-    </aside>
-
-    <main>
-        <section>
-            <h2>List of games</h2>
-            <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-                    </span>
+    <div class="row">
+      <aside class="col l3">
+          <div>
+            <h2>Price</h2>
+              <p>
+                  <label>
+                    <input type="checkbox" class="filled-in" checked="checked" />
+                    <span>Filled in</span>
+                  </label>
+              </p>
+              <p>
+                  <label>
+                    <input type="checkbox" class="filled-in" checked="checked" />
+                    <span>Filled in</span>
+                  </label>
+              </p>
+              <p>
+                  <label>
+                    <input type="checkbox" class="filled-in" checked="checked" />
+                    <span>Filled in</span>
+                  </label>
+              </p>
+          </div>
+      </aside>
+  
+      <main class="col l9">
+          <section>
+              <h2>List of games</h2>
+              <div class="row">
+                  <div class="col s12 m4">
+                    <div class="card-panel teal">
+                      <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                      </span>
+                    </div>
                   </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-                    </span>
+                  <div class="col s12 m4">
+                    <div class="card-panel teal">
+                      <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                      </span>
+                    </div>
                   </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12 m5">
-                  <div class="card-panel teal">
-                    <span class="white-text">I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-                    </span>
+                  <div class="col s12 m4">
+                    <div class="card-panel teal">
+                      <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                      </span>
+                    </div>
                   </div>
-                </div>
-            </div>
-        </section>
-        <section>
-            <h2>Hardware</h2>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </section>
-    </main>
+              </div>
+          </section>
+          <section>
+              <h2>Hardware</h2>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+          </section>
+      </main>
+    </div>
 
 </body>
 
