--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     
     <aside>
-        <div>
+        <div id="option-Box">
             <p>
                 <label>
                   <input type="checkbox" class="filled-in" checked="checked" />
@@ -66,9 +66,17 @@
                   <span>Filled in</span>
                 </label>
             </p>
+            <h2>Price check</h2>
+            <div>
+              <form action="#">
+                <p class="range-field">
+                  <input type="range" id="test5" min="0" max="100" />
+                </p>
+              </form>
+            </div>
         </div>
         <div>
-            <h2>Price check</h2>
+          
         </div>
     </aside>
 
@@ -119,6 +127,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="module">
+      import noUiSlider from 'nouislider/dist/nouislider.mjs';
+      </script>
     <script src="./assets/js/script.js"></script>
 </footer>
 
