added a range bar

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       <aside class="col l3">
           <div>
             <h2>Price</h2>
+            <form action="#">
+              <p class="range-field">
+                <input type="range" id="test5" min="0" max="100" />
+              </p>
+            </form>
               <p>
                   <label>
                     <input type="checkbox" class="filled-in" checked="checked" />
