--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       <main class="col l9">
           <section>
               <h2>List of games</h2>
-              <div class="row">
-                  <div class="col s12 m4">
+              <div class="row" id="games">
+                  <!-- <div class="col s12 m4">
                     <div class="card-panel teal">
                       <span class="white-text">I am a very simple card. I am good at containing small bits of information.
                       I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
@@ -97,16 +97,8 @@
                       I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
                       </span>
                     </div>
-                  </div>
+                  </div> -->
               </div>
-          </section>
-          <section>
-              <h2>Hardware</h2>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
           </section>
       </main>
     </div>
