--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
           <nav>
             <div class="nav-wrapper">
               <a href="#!" class="brand-logo">Let's Play</a>
-              <ul class="right hide-on-med-and-down">
-                <li><a href="#">Sass</a></li>
-                <li><a href="#">Components</a></li>
-                <!-- Dropdown Trigger -->
-                <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
-              </ul>
             </div>
           </nav>
     </header>
@@ -45,31 +39,84 @@
     <div class="row">
       <aside class="col l3">
           <div>
-            <h2>Price</h2>
+            <h2>Option Filter</h2>
+            <h4>Price Ranges</h4>
             <form action="#">
               <p class="range-field">
-                <input type="range" id="test5" step="0.01" min="0.00" max="60.00" />
+                <input type="range" id="gamePrice" step="0.01" min="0.00" max="60.00" />
               </p>
             </form>
+<!-- Drop Down Menu for Game Age -->
+           <!-- Dropdown Trigger -->
+           <a class='dropdown-trigger btn' href='#' data-target='dropdown2'>Release Decade</a>
+
+           <!-- Dropdown Structure -->
+           <ul id='dropdown2' class='dropdown-content'>
+             <li onclick="dateSelected(3000)"><a id="#yearAll">All</a></li>
+             <li onclick="dateSelected(2020)"><a id="#year2020">2020's</a></li>
+             <li onclick="dateSelected(2010)"><a id="#year2010">2010's</a></li>
+             <li onclick="dateSelected(2000)"><a id="#year2000">2000's</a></li>
+             <li onclick="dateSelected(1990)"><a id="#year1990">1990's</a></li>
+             <li onclick="dateSelected(1980)"><a id="#year1980">1980's</a></li>
+           </ul>
+           <h4> Game Ratings</h4>
               <p>
-                  <label>
-                    <input type="checkbox" class="filled-in" checked="checked" />
-                    <span>Filled in</span>
+                  <label for="posOver">
+                    <input id="posOver" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('posOver')"/>
+                    <span> Overwhelmingly Positive.</span>
                   </label>
               </p>
               <p>
-                  <label>
-                    <input type="checkbox" class="filled-in" checked="checked" />
-                    <span>Filled in</span>
+                  <label for="posVery">
+                    <input id="posVery" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('posVery')"/>
+                    <span> Very Positive.</span>
                   </label>
               </p>
               <p>
-                  <label>
-                    <input type="checkbox" class="filled-in" checked="checked" />
-                    <span>Filled in</span>
+                  <label for="posMost">
+                    <input id="posMost" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('posMost')"/>
+                    <span> Mostly Positive.</span>
                   </label>
               </p>
-            <input type="submit">
+              <p>
+                  <label for="posJust">
+                    <input id="posJust" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('posJust')"/>
+                    <span> Positive.</span>
+                  </label>
+              </p>
+              <p>
+                  <label for="mixed">
+                    <input id="mixed" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('mixed')"/>
+                    <span> Mixed.</span>
+                  </label>
+              </p>
+              <p>
+                  <label for="negJust">
+                    <input id="negJust" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('negJust')"/>
+                    <span> Negative.</span>
+                  </label>
+              </p>
+              <p>
+                  <label for="negMost">
+                    <input id="negMost" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('negMost')"/>
+                    <span> Mostly Negative.</span>
+                  </label>
+              </p>
+              <p>
+                  <label for="negVery">
+                    <input id="negVery" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('negVery')"/>
+                    <span> Very Negative.</span>
+                  </label>
+              </p>
+              <p>
+                  <label for="negOver">
+                    <input id="negOver" type="checkbox" name="checkRating" class="filled-in" onclick="isChecked('negOver')"/>
+                    <span>Overwhelmingly Negative .</span>
+                  </label>
+              </p>
+            <button id="filterSubmit" class="btn waves-effect waves-light" type="submit" name="action" style="margin-left:50px">Submit
+              <i class="material-icons right">send</i>
+            </button>
           </div>
       </aside>
   
@@ -101,22 +148,22 @@
               </div>
           </section>
           <section>
-              <h2>Hardware</h2>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
           </section>
       </main>
     </div>
-
+<div>
+  <h2>Games History</h2>
+</div>
 </body>
 
 <footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    ></script>
     <script src="./assets/js/script.js"></script>
 </footer>
 
