--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   
       <main class="col m12 l9">
           <section>
-              <h2>List of games</h2>
+              <h2>Game Results:</h2>
               <div class="row" id="games">
                   <!-- <div class="col s12 m4">
                     <div class="card-panel teal">
