--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="./node_modules/p5js/p5.js/p5.js"></script>
 
+
 </head>
 
 
@@ -151,17 +152,30 @@
       </main>
     </div>
 <div>
-  <h2>Games History</h2>
+  <h2 id="game-History">Games History</h2>
+  <button id="funky-button">click</button>
+    <div class="row">
+        <div class="col s12 m7" id="wiki-anchor">
+            <div class="default-hidden">World of Warcraft</div>
+            <div class="default-hidden">Risk of Rain 2</div>
+            <div class="default-hidden">Pac-Man</div>
+            <div class="default-hidden">Minecraft</div>
+            <div class="default-hidden">League of Legends</div>
+        </div>
+        <div class="col s12 m7" id="render-anchor">
+        
+        </div>
+    </div>
 </div>
 </body>
 
 <footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+        type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
     ></script>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/wikiScrape.js"></script>
