pushing to dev, working for the most part

--- a/index.html
+++ b/index.html
@@ -153,18 +153,13 @@
       </main>
     </div>
 <div>
+
   <h2 id="game-History">Games History</h2>
-  <button id="funky-button">click</button>
+  <button id="hidden-activator" class="default-hidden"></button>
     <div class="row">
-        <div class="col s12 m7" id="wiki-anchor">
-            <div class="default-hidden">World of Warcraft</div>
-            <div class="default-hidden">Risk of Rain 2</div>
-            <div class="default-hidden">Pac-Man</div>
-            <div class="default-hidden">Minecraft</div>
-            <div class="default-hidden">League of Legends</div>
+        <div id="games-anchor">
         </div>
         <div class="col s12 m7" id="render-anchor">
-        
         </div>
     </div>
 </div>
