added grid css framework to the wiki part of the page

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 
   <h2 id="game-History">Games History</h2>
   <button id="hidden-activator" class="default-hidden"></button>
-    <div class="row">
+    <div>
         <div id="games-anchor">
         </div>
-        <div class="col s12 m7" id="render-anchor">
+        <div class="row" id="render-anchor">
         </div>
     </div>
 </div>
