--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
   <h2 id="game-History">Games History</h2>
   <button id="hidden-activator" class="default-hidden"></button>
     <div class="row">
-        <div id="games-anchor">
+        <div id="gamesAnchor">
         </div>
-        <div class="col s12 m7" id="render-anchor">
+        <div class="col s12 m7" id="renderAnchor">
         </div>
     </div>
 </div>
